--- a/components/accordeon/Accordion.module.scss
+++ b/components/accordeon/Accordion.module.scss
@@ -65,6 +65,7 @@
 
 .header_container {
   display: flex;
+  padding: 0 10px 0 0;
   width: 100%;
   align-items: center;
   justify-content: space-between;
