--- a/features/contacts/tab_interaction/Interaction.module.scss
+++ b/features/contacts/tab_interaction/Interaction.module.scss
@@ -56,11 +56,9 @@
   grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
   gap: 20px;
   margin: 0 0 5% 0;
-
   &:last-child {
     margin-bottom: 80px;
   }
-
   &_item {
     border-radius: 10px;
     overflow: hidden;
@@ -77,10 +75,11 @@
 
     h2 {
       font-size: 20px;
-      font-weight: 600;
-      line-height: 23px;
+      font-weight: 400;
+      line-height: 125%;
       letter-spacing: 0.025em;
-      color: #33953A;
+      color: color(green);
+      margin-bottom: 25px;
     }
 
     p {
@@ -89,11 +88,9 @@
       color: gray;
       align-items: flex-start;
       font-size: 16px;
-
-
       a {
         color: color(green);
-
+        font-size: 14px;
         &:hover {
           opacity: 0.6;
         }
@@ -107,8 +104,10 @@
     }
 
     &_box {
-      > p {
-        margin: 8px 0;
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+      p {
         align-items: flex-start;
       }
     }
