--- a/features/home/about/About.module.scss
+++ b/features/home/about/About.module.scss
@@ -23,7 +23,7 @@
   &__container {
     width: 100%;
     @include backgroundImage(cover);
-    background-image: url('/images/about_banner.webp');
+    background-image: url('/images/about_banner.jpg');
     margin: auto;
     @media (max-width: 1200px) {
       padding: 40px;
@@ -49,9 +49,8 @@
   }
 
   &__right_block {
-    max-width: 690px;
-    background-color: darkgreen;
-    padding: 50px 40px;
+    max-width: 730px;
+    padding: 50px 0 40px 40px;
     @media (max-width: 1200px) {
       max-width: 100%;
     }
@@ -110,7 +109,6 @@
 
   .tiles {
     display: flex;
-    justify-content: center;
     flex-wrap: wrap;
     gap: 1px;
     @media (max-width: 1200px) {
@@ -152,11 +150,10 @@
     overflow: hidden;
     position: relative;
     border-radius: 50%;
-    width: 130px;
-    height: 130px;
+    width: 140px;
+    height: 140px;
     transition: 0.1s;
     margin: 0;
-
     &:hover {
       box-shadow: 0 2px 50px 4px #ffffff;
       z-index: 10;
@@ -171,11 +168,11 @@
   }
 
   .tile__item_2 {
-    margin: 0 0 0 -16px !important;
+    margin: -10px 0 0 -16px !important;
   }
 
   .tile__item_3 {
-    margin: 20px 0 0 -16px !important;
+    margin: 40px 5px -20px -25px !important;
   }
 
   .tile__item_4 {
@@ -183,31 +180,34 @@
   }
 
   .tile__item_5 {
-    margin: 20px 0 0 -16px !important;
+    margin: 0px -8px 0 -18px !important;
   }
 
   .tile__item_6 {
-    margin: -40px 12px 0 -6px !important;
+    margin: -50px 0px 0 -5px !important;
   }
 
   .tile__item_7 {
-    margin: -25px 0 0 -12px !important;
+    margin: -7px 0 0 -16px !important;
+  }
+  .tile__item_8 {
+    margin: -32px 0 0 0 !important;
   }
 
   .tile__item_9 {
-    margin: -44px -9px 0 -8px !important;
+    margin: -11px -9px 0 -8px !important;
   }
 
   .tile__item_10 {
-    margin: -30px 0 0 -5px !important;
+    margin: -55px -4px -10px -8px !important;
   }
 
   .tile__item_11 {
-    margin: 0 0 0 -16px !important;
+    margin: -12px 0 0 -16px !important;
   }
 
   .tile__item_12 {
-    margin: -16px 20px 0 0 !important;
+    margin: -38px 0 0 0 !important;
   }
 
   .tile__item_13 {
@@ -279,8 +279,8 @@
   }
 
   .tiles .tile:hover > img {
-    width: 130px !important;
-    height: 130px !important;
+    width: 140px !important;
+    height: 140px !important;
     z-index: 10;
   }
 
@@ -288,136 +288,136 @@
     display: block;
     margin: 0 auto 0;
     backface-visibility: hidden;
-    width: 100px;
-    height: 100px;
+    width: 110px;
+    height: 110px;
     border-radius: 50%;
     transition: 0.1s;
   }
 
-  .tiles .tile .img__1 {
-    width: 80px;
-    height: 80px;
-  }
+  //.tiles .tile .img__1 {
+  //  width: 80px;
+  //  height: 80px;
+  //}
 
-  .tiles .tile .img__2 {
-    width: 105px;
-    height: 105px;
-  }
+  //.tiles .tile .img__2 {
+  //  width: 105px;
+  //  height: 105px;
+  //}
 
-  .tiles .tile .img__3 {
-    width: 96px;
-    height: 96px;
-  }
+  //.tiles .tile .img__3 {
+  //  width: 96px;
+  //  height: 96px;
+  //}
 
-  .tiles .tile .img__4 {
-    width: 85px;
-    height: 85px;
-  }
+  //.tiles .tile .img__4 {
+  //  width: 85px;
+  //  height: 85px;
+  //}
 
-  .tiles .tile .img__5 {
-    width: 90px;
-    height: 90px;
-  }
+  //.tiles .tile .img__5 {
+  //  width: 90px;
+  //  height: 90px;
+  //}
 
-  .tiles .tile .img__6 {
-    width: 105px;
-    height: 105px;
-  }
+  //.tiles .tile .img__6 {
+  //  width: 105px;
+  //  height: 105px;
+  //}
 
-  .tiles .tile .img__7 {
-    width: 133px;
-    height: 133px;
-  }
+  //.tiles .tile .img__7 {
+  //  width: 120px;
+  //  height: 120px;
+  //}
 
-  .tiles .tile .img__8 {
-    width: 100px;
-    height: 100px;
-  }
+  //.tiles .tile .img__8 {
+  //  width: 100px;
+  //  height: 100px;
+  //}
+  //
+  //.tiles .tile .img__9 {
+  //  width: 100px;
+  //  height: 100px;
+  //}
+  //
+  //.tiles .tile .img__10 {
+  //  width: 110px;
+  //  height: 110px;
+  //}
 
-  .tiles .tile .img__9 {
-    width: 100px;
-    height: 100px;
-  }
+  //.tiles .tile .img__11 {
+  //  width: 85px;
+  //  height: 85px;
+  //}
+  //
+  //.tiles .tile .img__12 {
+  //  width: 110px;
+  //  height: 110px;
+  //}
+  //
+  //.tiles .tile .img__13 {
+  //  width: 100px;
+  //  height: 100px;
+  //}
 
-  .tiles .tile .img__10 {
-    width: 110px;
-    height: 110px;
-  }
+  //.tiles .tile .img__14 {
+  //  width: 120px;
+  //  height: 120px;
+  //}
 
-  .tiles .tile .img__11 {
-    width: 85px;
-    height: 85px;
-  }
+  //.tiles .tile .img__15 {
+  //  width: 110px;
+  //  height: 110px;
+  //}
+  //
+  //.tiles .tile .img__16 {
+  //  width: 100px;
+  //  height: 100px;
+  //}
+  //
+  //.tiles .tile .img__17 {
+  //  width: 90px;
+  //  height: 90px;
+  //}
 
-  .tiles .tile .img__12 {
-    width: 110px;
-    height: 110px;
-  }
+  //.tiles .tile .img__18 {
+  //  width: 90px;
+  //  height: 90px;
+  //}
+  //
+  //.tiles .tile .img__19 {
+  //  width: 110px;
+  //  height: 110px;
+  //}
+  //
+  //.tiles .tile .img__20 {
+  //  width: 110px;
+  //  height: 110px;
+  //}
 
-  .tiles .tile .img__13 {
-    width: 100px;
-    height: 100px;
-  }
+  //.tiles .tile .img__21 {
+  //  width: 120px;
+  //  height: 120px;
+  //}
+  //
+  //.tiles .tile .img__22 {
+  //  width: 90px;
+  //  height: 90px;
+  //}
 
-  .tiles .tile .img__14 {
-    width: 120px;
-    height: 120px;
-  }
+  //.tiles .tile .img__23 {
+  //  width: 110px;
+  //  height: 110px;
+  //}
+  //
+  //.tiles .tile .img__24 {
+  //  width: 100px;
+  //  height: 100px;
+  //}
 
-  .tiles .tile .img__15 {
-    width: 110px;
-    height: 110px;
-  }
-
-  .tiles .tile .img__16 {
-    width: 100px;
-    height: 100px;
-  }
-
-  .tiles .tile .img__17 {
-    width: 90px;
-    height: 90px;
-  }
-
-  .tiles .tile .img__18 {
-    width: 90px;
-    height: 90px;
-  }
-
-  .tiles .tile .img__19 {
-    width: 110px;
-    height: 110px;
-  }
-
-  .tiles .tile .img__20 {
-    width: 110px;
-    height: 110px;
-  }
-
-  .tiles .tile .img__21 {
-    width: 120px;
-    height: 120px;
-  }
-
-  .tiles .tile .img__22 {
-    width: 90px;
-    height: 90px;
-  }
-
-  .tiles .tile .img__23 {
-    width: 110px;
-    height: 110px;
-  }
-
-  .tiles .tile .img__24 {
-    width: 100px;
-    height: 100px;
-  }
-
-  .tiles .tile .img__25 {
-    width: 90px;
-    height: 90px;
-  }
+  //.tiles .tile .img__25 {
+  //  width: 90px;
+  //  height: 90px;
+  //}
 
 
   .tiles .tile .details {
@@ -480,13 +480,11 @@
   .tiles .tile:hover .info {
     transition-delay: 0.15s;
   }
-
-
   &__progress_box {
     display: flex;
     flex-wrap: wrap;
     gap: 40px;
-    justify-content: space-around;
+    justify-content: space-between;
     @media (max-width: 1200px) {
       justify-content: center;
     }
