--- a/features/auth/answer/Answer.module.scss
+++ b/features/auth/answer/Answer.module.scss
@@ -6,7 +6,7 @@
   justify-content: center;
 
   .answer_container {
-    margin: 60px 0;
+    margin: 100px 0;
     display: flex;
     width: 100%;
     max-height: 450px;
@@ -17,7 +17,7 @@
     justify-content: center;
     gap: 30px;
     background: #FFFFFF;
-    box-shadow: 0px 3px 30px rgba(0, 0, 0, 0.06);
+    box-shadow: 0 3px 30px rgba(0, 0, 0, 0.06);
     border-radius: 30px;
     padding: 38px;
 
