--- a/features/home/about/About.module.scss
+++ b/features/home/about/About.module.scss
@@ -37,7 +37,7 @@
   &__elem_box {
     display: flex;
     align-items: center;
-    gap: 40px;
+    justify-content: space-between;
     margin: 0 auto;
     max-width: 1390px;
     @media (max-width: 1200px) {
@@ -49,7 +49,7 @@
   }
 
   &__right_block {
-    max-width: 730px;
+    max-width: 650px;
     padding: 50px 0 40px 40px;
     @media (max-width: 1200px) {
       max-width: 100%;
@@ -150,8 +150,8 @@
     overflow: hidden;
     position: relative;
     border-radius: 50%;
-    width: 140px;
-    height: 140px;
+    width: 130px;
+    height: 130px;
     transition: 0.1s;
     margin: 0;
     &:hover {
@@ -161,97 +161,121 @@
   }
 
   .tile__item_1 {
-    margin: 30px 0 0 0 !important;
+    margin: 30px 7px 0 0 !important;
+    width: 130px !important;
+    height: 130px !important;
+    img {
+      width: 130px !important;
+      height: 130px !important;
+    }
     @include ipadScreen {
       margin: 15px 0 0 -30px !important;
     }
   }
 
   .tile__item_2 {
-    margin: -10px 0 0 -16px !important;
+    margin: 45px 0 0 -18px !important;
   }
 
   .tile__item_3 {
-    margin: 40px 5px -20px -25px !important;
+    margin: 15px 5px 0 -23px !important;
   }
 
   .tile__item_4 {
-    margin: 10px -16px 0 -25px !important;
+    margin: 40px -20px 0 -25px !important;
   }
 
   .tile__item_5 {
-    margin: 0px -8px 0 -18px !important;
+    margin: 20px 0 0 0 !important;
   }
 
   .tile__item_6 {
-    margin: -50px 0px 0 -5px !important;
+    margin: -14px 0 0 -38px !important;
   }
 
   .tile__item_7 {
-    margin: -7px 0 0 -16px !important;
+    margin: -24px 0 0 -18px !important;
   }
   .tile__item_8 {
-    margin: -32px 0 0 0 !important;
+    margin: -50px 0 0 -18px !important;
   }
 
   .tile__item_9 {
-    margin: -11px -9px 0 -8px !important;
+    margin: -23px 0px 27px -18px !important;
   }
 
   .tile__item_10 {
     margin: -55px -4px -10px -8px !important;
+    width: 130px !important;
+    height: 130px !important;
+    img {
+      width: 130px !important;
+      height: 130px !important;
+    }
   }
 
   .tile__item_11 {
-    margin: -12px 0 0 -16px !important;
+    margin: -35px -18px 0px -15px !important;
+    width: 130px !important;
+    height: 130px !important;
+    img {
+      width: 130px !important;
+      height: 130px !important;
+    }
   }
 
   .tile__item_12 {
-    margin: -38px 0 0 0 !important;
+    margin: -45px 28px -8px 10px !important
   }
 
   .tile__item_13 {
-    margin: -74px 7px 0 -52px !important;
+    margin: -70px 0px 0 -42px !important;
   }
 
   .tile__item_14 {
-    margin: -90px 0 0 -16px !important;
+    margin: -53px 0 0 -20px !important;
   }
 
   .tile__item_15 {
-    margin: -40px 0 0 -6px !important;
+    margin: -47px 0 18px -20px !important;
   }
 
   .tile__item_16 {
-    margin: -16px 0 0 -1px !important;
+    margin: 4px 0 0 -45px !important;
   }
 
   .tile__item_17 {
-    margin: 0 0 0 -16px !important;
+    margin: -20px 18px 0 -17px !important;
   }
 
   .tile__item_18 {
-    margin: -70px 24px 0 -54px !important;
+    margin: -60px 8px 0 -34px !important;
   }
 
   .tile__item_19 {
-    margin: -70px 0px 0 -28px !important;
+    margin: -50px 0px 0 -25px !important
   }
 
   .tile__item_20 {
-    margin: -27px 0px 0 0px !important;
+    margin: -37px 0 0 -10px !important;
   }
 
   .tile__item_21 {
-    margin: 0 0 0 0 !important;
+    margin: -24px 40px 0 20px !important;
   }
 
   .tile__item_22 {
-    margin: -28px 40px 0 -50px !important;
+    margin: -68px 0 0 -50px !important;
   }
 
   .tile__item_23 {
-    margin: -100px 0px 0 -20px !important;
+    margin: -70px 0px 0 0px !important;
+    width: 130px !important;
+    height: 130px !important;
+    img {
+      width: 130px !important;
+      height: 130px !important;
+    }
   }
 
   .tile__item_24 {
@@ -279,8 +303,8 @@
   }
 
   .tiles .tile:hover > img {
-    width: 140px !important;
-    height: 140px !important;
+    width: 130px !important;
+    height: 130px !important;
     z-index: 10;
   }
 
@@ -288,8 +312,8 @@
     display: block;
     margin: 0 auto 0;
     backface-visibility: hidden;
-    width: 110px;
-    height: 110px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     transition: 0.1s;
   }
