--- a/features/resources/tab_questionnaires/QuestionnairesContainer.module.scss
+++ b/features/resources/tab_questionnaires/QuestionnairesContainer.module.scss
@@ -7,7 +7,7 @@
 .questionnaires {
   display: flex;
   background-color: color(white);
-  box-shadow: 0px 3px 30px rgba(0, 0, 0, 0.06);
+  box-shadow: 0 3px 30px rgba(0, 0, 0, 0.06);
   border-radius: 12px;
   margin-bottom: 20px;
   gap: 12px;
