--- a/features/news/action/FormNews.module.scss
+++ b/features/news/action/FormNews.module.scss
@@ -4,3 +4,46 @@
 .added_news {
   margin: 40px 0;
 }
+.added_news_banner {
+  margin: 50px 0;
+  background: #f1f1f1;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 580px;
+  .added_input {
+    position: relative;
+    background-color: #009247;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    height: 10vw;
+    width: 10vw;
+    .added_label {
+      background-image: url('/images/add.svg');
+      background-repeat: no-repeat;
+      background-size: cover;
+      border-radius: 10px;
+      display: block;
+      width: 70%;
+      height: 70%;
+      cursor: pointer;
+      z-index: 2;
+      &_span {
+        display: none;
+      }
+    }
+  }
+  &_todo_container {
+    .input_block {
+      margin-bottom: 12px;
+    }
+    .textarea_block {
+    }
+  }
+
+
+}
