--- a/styles/include/_normalize.scss
+++ b/styles/include/_normalize.scss
@@ -17,6 +17,10 @@ body {
   height: 100%;
 }
 
+.css-qc6sy-singleValue {
+  color: hsl(149, 100%, 29%) !important;
+}
+
 main {
   flex: 1 1 auto;
   margin-top: 110px;
