--- a/features/resources/tab_bim/Bim.module.scss
+++ b/features/resources/tab_bim/Bim.module.scss
@@ -31,10 +31,22 @@
     transition: all .3s;
     overflow: hidden;
     box-shadow: 0 0 4px rgb(33 33 33 / 21%);
+
+    a {
+      position: absolute;
+      border: 1px solid color(white);
+      margin-top: 10px;
+      margin-left: 10px;
+      border-radius: 50%;
+      padding: 5px ;
+      background-color: color(white);
+    }
+
     &:hover {
       box-shadow: 0 0 30px rgba(20, 20, 20, 0.2);
       transform: translateY(-2px);
       transition: all 0.3s;
+
       p {
         color: #F89A00;
       }
@@ -55,6 +67,7 @@
   &__item__img {
     overflow: hidden;
     border-radius: 10px 10px 0 0;
+
     img {
       width: 100%;
       height: 100%;
@@ -71,6 +84,7 @@
       background: #F89A00;
       padding: 15px 0;
     }
+
     p {
       font-weight: normal;
       line-height: 150%;
