--- a/features/news/action/FormNews.module.scss
+++ b/features/news/action/FormNews.module.scss
@@ -3,47 +3,66 @@
 
 .added_news {
   margin: 40px 0;
-}
-.added_news_banner {
-  margin: 50px 0;
-  background: #f1f1f1;
-  border-radius: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 580px;
-  .added_input {
-    position: relative;
-    background-color: #009247;
+  &_banner {
+    margin: 50px 0;
+    background: #f1f1f1;
+    border-radius: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 50%;
-    height: 10vw;
-    width: 10vw;
-    .added_label {
-      background-image: url('/images/add.svg');
-      background-repeat: no-repeat;
-      background-size: cover;
-      border-radius: 10px;
-      display: block;
-      width: 70%;
-      height: 70%;
-      cursor: pointer;
-      z-index: 2;
-      &_span {
-        display: none;
+    width: 100%;
+    height: 580px;
+    .added_input {
+      position: relative;
+      background-color: #009247;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50%;
+      height: 10vw;
+      width: 10vw;
+      .added_label {
+        background-image: url('/images/add.svg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        border-radius: 10px;
+        display: block;
+        width: 70%;
+        height: 70%;
+        cursor: pointer;
+        z-index: 2;
+        &_span {
+          display: none;
+        }
       }
     }
   }
   &_todo_container {
     .input_block {
       margin-bottom: 12px;
+      display: flex;
+      justify-content: space-between;
+      button {
+        width: 100px;
+      }
     }
     .textarea_block {
+      overflow: hidden;
+      width: 100%;
+      textarea {
+        overflow: hidden;
+        width: 100%;
+        height: 100px;
+        padding: 10px;
+        border-radius: 6px;
+        background-color: color(white);
+        border-color: rgb(207, 207, 207);
+        box-sizing: border-box;
+        &::placeholder {
+          color: rgb(0, 0, 0);
+          font-size: 14px;
+        }
+      }
     }
   }
-
-
 }
