--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -14,6 +14,7 @@ $colors: (
         text:#212121,
         text-hover:#60955B,
         shadow: #a5a5a5,
+        job_circle:#dddddd,
 );
 
 $screenWidth: (
