--- a/features/about/tab_job/Job.module.scss
+++ b/features/about/tab_job/Job.module.scss
@@ -7,6 +7,7 @@
     margin: 40px auto;
   }
 }
+
 .bottom__separator {
   margin-bottom: 0;
 }
@@ -96,13 +97,16 @@
 
 .job_count {
   border: 2px solid white;
-  padding: 10px;
-  text-align: center;
-  width: 16px;
-  height: 16px;
+  padding: 6px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  width: 6px;
+  height: 6px;
+  font-size: 10px;
   border-radius: 50%;
-  color: white;
-  box-shadow: 0 0 2px 1px rgba(221, 221, 221, 1);
+  color: color(white);
+  box-shadow: 0 0 1px 0.5px color(job_circle);
 }
 
 .vacancies__bottom_info {
@@ -133,13 +137,15 @@
   background: #FFFFFF;
   box-shadow: 0 3px 30px rgba(0, 0, 0, 0.06);
   border-radius: 10px;
-  padding: 20px ;
+  padding: 20px;
+
   h2 {
     font-size: 25px;
     font-weight: 400;
     color: color(green);
     margin-bottom: 10px;
   }
+
   p {
     font-size: 16px;
     color: color(green);
