--- a/features/about/tab_job/Job.module.scss
+++ b/features/about/tab_job/Job.module.scss
@@ -3,6 +3,8 @@
 
 .job_container {
   margin: 40px auto 80px;
+  position: relative;
+  z-index: 2;
   @include ipadScreen {
     margin: 40px auto;
   }
