--- a/features/resources/tab_bim/Bim.module.scss
+++ b/features/resources/tab_bim/Bim.module.scss
@@ -79,7 +79,7 @@
         font-size: 16px;
         background-color: grey;
         padding: 12px 29px;
-        pointer-events: none;
+        cursor: not-allowed;
         span {
           svg {
             width: 18px;
