--- a/features/news/action/FormNews.module.scss
+++ b/features/news/action/FormNews.module.scss
@@ -38,12 +38,17 @@
     }
   }
   &_todo_container {
+    margin-bottom: 50px;
     .input_block {
       margin-bottom: 12px;
       display: flex;
       justify-content: space-between;
+      gap: 20px;
+      &_input {
+        width: 100%;
+      }
       button {
-        width: 100px;
+        width: 130px;
       }
     }
     .textarea_block {
