--- a/features/resources/tab_catalog/Catalog.module.scss
+++ b/features/resources/tab_catalog/Catalog.module.scss
@@ -53,7 +53,7 @@
     border: 1px solid color(green)
     }
   }
-  svg{
+  svg {
     width: 22px;
     height: 22px;
     path{
@@ -72,6 +72,7 @@
     margin: 20px 0 80px 0;
   }
   .box_item{
+    position: relative;
     display: flex;
     align-items: flex-start;
     background-color: #f5f5f5;
@@ -115,19 +116,35 @@
 
       &_title{
         p {
-          font-size: 16px;
-          line-height: 145%;
-          color: #212121;
-          margin-bottom: 25px;
+          font-weight: 400;
+          font-size: 18px;
+          line-height: 125%;
+          letter-spacing: 0.02em;
+          color: color(dark);
+          -webkit-line-clamp: 4;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          display: -webkit-box;
+          -webkit-box-orient: vertical;
+          text-overflow: ellipsis;
+          height: 78px;
           @include phoneScreen {
             text-align: center;
-            margin-bottom: 12px;
           }
         }
       }
     }
-
-    &__item_button{
+    &__info_update {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      padding: 10px;
+      background-color: #e9e9e9;
+    }
+    &__item_button {
       display: flex;
       align-items: center;
       @include phoneScreen {
@@ -142,6 +159,42 @@
       p {
         margin: 0 10px;
         color: gray;
+      }
+      .disabled_active {
+        border-radius: 10px;
+        &:hover {
+          background: color(green);
+          color: color(white);
+          path {
+            fill: #fff;
+          }
+        }
+        button{
+          display: flex;
+          align-items: center;
+          gap: 12px;
+          transition: none !important;
+        }
+        span {
+          svg {
+            width: 18px;
+          }
+          path {
+            fill: white;
+          }
+        }
+      }
+      .disabled {
+        cursor: not-allowed;
+        border-radius: 10px;
+        button {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+          background-color: grey !important;
+          cursor: not-allowed !important;
+          transition: none !important;
+        }
       }
     }
   }
