--- a/features/home/news/News.module.scss
+++ b/features/home/news/News.module.scss
@@ -88,6 +88,7 @@
 .col3 {
   grid-area: col3;
   border: 1px solid #f3f3f3;
+  background-color: #f3f3f3;
   h2 {
     font-size: 25px;
     color: color(dark);
