--- a/components/pagination/Pagination.module.scss
+++ b/components/pagination/Pagination.module.scss
@@ -8,14 +8,14 @@
   justify-content: center;
   margin: 50px 0;
   @media (max-width: 450px){
-    margin: 40px 0;
-    flex-direction: column;
-    align-items: center;
-    gap: 16px;
+    column-gap: 5px;
   }
   .round_buttons {
     display: flex;
-    gap: 10px
+    gap: 10px;
+    @media (max-width: 450px){
+      gap: 5px;
+    }
   }
   .pagination_item {
     cursor: pointer;
