--- a/components/tabs/Tabs.module.scss
+++ b/components/tabs/Tabs.module.scss
@@ -21,9 +21,13 @@
       align-items: center;
       justify-content: space-between;
       @media (max-width: 850px) {
-        flex-direction: column;
-        justify-content: center;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
         gap: 15px;
+      }
+      @media (max-width: 400px) {
+        display: flex;
+        flex-direction: column;
       }
 
       &.line_fix {
