--- a/features/resources/tab_bim/Bim.module.scss
+++ b/features/resources/tab_bim/Bim.module.scss
@@ -18,6 +18,14 @@
 
   @include phoneScreen {
     margin-bottom: 50px;
+    justify-content: center;
+  }
+
+  @media (max-width: 500px) {
+    grid-template-columns: repeat(auto-fit, minmax(360px, 340px));
+  }
+  @media (max-width: 400px) {
+    grid-template-columns: repeat(auto-fit, minmax(320px, 320px));
   }
 
   &__item {
