--- a/features/about/tab_who_we/about/WhoWeAbout.module.scss
+++ b/features/about/tab_who_we/about/WhoWeAbout.module.scss
@@ -25,15 +25,18 @@
     display: flex;
     padding: 50px 20px;
     flex-direction: column;
+    @media (max-width: 1200px) {
+      max-width: 90%;
+    }
     @include ipadScreen {
       border-radius: 10px;
       margin: -130px auto 30px;
       padding: 30px;
+      max-width: 80%;
     }
 
     @include phoneScreen {
       border-radius: 10px;
-      margin: -130px auto 30px;
       padding: 15px 10px;
     }
 
