--- a/features/resources/tab_certificates/Certificates.module.scss
+++ b/features/resources/tab_certificates/Certificates.module.scss
@@ -10,13 +10,16 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(440px, 1fr));
   gap: 20px;
-  margin-bottom: 130px;
+  margin: 50px 0 130px 0;
   @include ipadScreen {
-    margin-bottom: 80px;
+    margin: 50px 0 80px 0;
   }
-
   @include phoneScreen {
     margin-bottom: 50px;
+  }
+  @media (max-width: 500px) {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 10px;
   }
 
   &__block {
@@ -35,7 +38,6 @@
     background-color: rgb(245, 245, 245);
     transition: all 0.3s;
     cursor: pointer;
-
     &:hover {
       box-shadow: 0 0 30px rgba(20, 20, 20, 0.2);
       transform: translateY(-2px);
@@ -45,8 +47,7 @@
 
   &__item__img {
     overflow: hidden;
-    border-radius: 10px 10px 0 0;
-
+    border-radius: 10px;
     &:hover {
       img {
         transform: scale(1.1);
