--- a/features/resources/tab_certificates/Certificates.module.scss
+++ b/features/resources/tab_certificates/Certificates.module.scss
@@ -86,7 +86,10 @@ display: contents;
     column-gap: 40px;
     text-align: left;
     justify-content: flex-start;
-
+    @include ipadScreen {
+      column-gap: 20px;
+      flex-direction: column;
+    }
     .separ {
       display: flex;
       flex-direction: column;
@@ -98,11 +101,14 @@ display: contents;
       border-radius: 10px;
       margin: 0;
       min-width: 200px;
-
       &:hover {
         img {
           transform: scale(1.1);
         }
+      }
+      @include phoneScreen {
+        margin: 0 auto;
+        max-width: 300px;
       }
 
       img {
@@ -129,6 +135,12 @@ display: contents;
       margin-bottom: 8px;
       color: color(dark);
       margin-top: 10px;
+      @include phoneScreen {
+        font-size: 18px;
+        line-height: 130%;
+        max-width: 100%;
+        text-align: center;
+      }
     }
 
     p {
@@ -139,6 +151,17 @@ display: contents;
       display: flex;
       align-items: center;
       gap: 10px;
+      margin-bottom: 20px;
+      @include phoneScreen {
+        font-size: 16px;
+        line-height: 122%;
+        justify-content: center;
+      }
+      svg {
+        @media (max-width: 500px) {
+          width: 25px;
+        }
+      }
     }
   }
 }
@@ -153,6 +176,9 @@ display: contents;
     path {
       fill: #fff;
     }
+  }
+  @include phoneScreen {
+    margin: 0 auto;
   }
   button{
     display: flex;
