--- a/features/about/tab_job/Job.module.scss
+++ b/features/about/tab_job/Job.module.scss
@@ -123,8 +123,11 @@
 
   p {
     text-align: center;
-    margin-top: 0;
-    color: color(dark);
+    margin-top: 8px;
+    font-size: 16px;
+    line-height: 145%;
+    color: #6f6f6f;
+
   }
 
   button {
@@ -135,12 +138,9 @@
 
 .no_vacancies {
   width: 100%;
-  height: 8vh;
-  background: #FFFFFF;
-  box-shadow: 0 3px 30px rgba(0, 0, 0, 0.06);
-  border-radius: 10px;
-  padding: 20px;
-
+  background: color(white);
+  box-shadow: 0 3px 30px rgb(0 0 0 / 6%);
+  border-radius: 30px;
   h2 {
     font-size: 25px;
     font-weight: 400;
