--- a/features/home/about/About.module.scss
+++ b/features/home/about/About.module.scss
@@ -62,6 +62,7 @@
     justify-content: space-between;
     max-width: 1000px;
     margin: 0 auto;
+    //@include
   }
   &__progress {
     text-align: center;
