--- a/components/slider/Slider.module.scss
+++ b/components/slider/Slider.module.scss
@@ -69,21 +69,11 @@
         padding: 25px 20px;
         border-radius: 20px;
       }
-      @include phoneScreen {
+      @include ipadScreen {
         display: none;
-      }
-      @media (max-width: 600px) {
-        right: 5%;
-      }
-      @media (max-width: 500px) {
-        top: 12%;
-        left: 3%;
-        right: 3%;
-        padding: 15px;
       }
       &_title {
         font-size: 30px;
-
         text-transform: uppercase;
         max-width: 540px;
         line-height: 128%;
@@ -91,20 +81,7 @@
         color: color(white);
         text-align: center;
         font-weight: 300;
-        @include tabletScreen {
-          font-size: 35px;
-          max-width: 370px;
-          letter-spacing: 0.010em;
-        }
-        @media (max-width: 1100px) {
-          font-size: 40px;
-          max-width: 490px;
-        }
         @media (max-width: 600px) {
-          font-size: 20px;
-          max-width: 210px;
-        }
-        @media (max-width: 400px) {
           font-size: 20px;
           max-width: 210px;
         }
@@ -585,24 +562,9 @@
         display: -webkit-box;
         -webkit-box-orient: vertical;
         text-overflow: ellipsis;
-        //@media (max-width: 1100px) {
-        //  font-size: 16px;
-        //  padding: 5px 0 35px 0;
-        //  height: 80px;
-        //  overflow: hidden;
-        //  display: -webkit-box;
-        //  -webkit-line-clamp: 5;
-        //  -webkit-box-orient: vertical;
-        //}
-        //@include phoneScreen {
-        //  font-size: 15px;
-        //  padding: 5px 0 26px 0;
-        //  height: 60%;
-        //  overflow: hidden;
-        //  display: -webkit-box;
-        //  -webkit-line-clamp: 5;
-        //  -webkit-box-orient: vertical;
-        //}
+        @include phoneScreen {
+          height: 220px;
+        }
       }
     }
 
